@@ -1,4 +1,7 @@
 2006-09-21  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/amcheck.c: Don't assert if holding use is set to 0.
+
+2006-09-21  Jean-Louis Martineau <martineau@zmanda.com>
 	* common-src/util.c: Declare keytable.
 	* common-src/util.h: Declare keytable as extern.
 
